Refactor spell system: modernize architecture, add toggle spells, optimize services, and update configurations