@@ -10,23 +10,40 @@ import org.bukkit.Location;
 import org.bukkit.Particle;
 import org.bukkit.Sound;
 import org.bukkit.attribute.Attribute;
+import org.bukkit.attribute.AttributeInstance;
 import org.bukkit.entity.ArmorStand;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Player;
+import org.bukkit.plugin.Plugin;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.scheduler.BukkitRunnable;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 public class RadiantBeacon extends Spell<Void> {
+
+    private double radius;
+    private double healAmount;
+    private double damageAmount;
+    private int totalPulses;
+    private int pulseInterval;
+    private int maxTargets;
+    private boolean hitPlayers;
+    private boolean hitMobs;
+    private boolean damagePlayers;
+
+    private static final Set<PotionEffectType> NEGATIVE_EFFECTS = Set.of(
+            PotionEffectType.POISON, PotionEffectType.WITHER, PotionEffectType.SLOWNESS,
+            PotionEffectType.WEAKNESS, PotionEffectType.BLINDNESS, PotionEffectType.NAUSEA);
 
     public static class Builder extends Spell.Builder<Void> {
         public Builder(EmpireWandAPI api) {
             super(api);
             this.name = "Radiant Beacon";
             this.description = "Creates a beacon that heals allies and damages enemies.";
-            this.manaCost = 20; // Example
             this.cooldown = java.time.Duration.ofSeconds(35);
             this.spellType = SpellType.HEAL;
         }
@@ -61,23 +78,32 @@ public class RadiantBeacon extends Spell<Void> {
     protected Void executeSpell(SpellContext context) {
         Player player = context.caster();
 
-        double radius = spellConfig.getDouble("values.radius", 6.0);
-        double healAmount = spellConfig.getDouble("values.heal-amount", 1.0);
-        double damageAmount = spellConfig.getDouble("values.damage-amount", 1.0);
-        int durationPulses = spellConfig.getInt("values.duration-pulses", 8);
-        int pulseInterval = spellConfig.getInt("values.pulse-interval-ticks", 20);
-        int maxTargets = spellConfig.getInt("values.max-targets", 8);
-        boolean hitPlayers = spellConfig.getBoolean("flags.hit-players", true);
-        boolean hitMobs = spellConfig.getBoolean("flags.hit-mobs", true);
+        this.radius = spellConfig.getDouble("values.radius", 6.0);
+        this.healAmount = spellConfig.getDouble("values.heal-amount", 1.0);
+        this.damageAmount = spellConfig.getDouble("values.damage-amount", 1.0);
+        this.totalPulses = spellConfig.getInt("values.duration-pulses", 8);
+        this.pulseInterval = spellConfig.getInt("values.pulse-interval-ticks", 20);
+        this.maxTargets = spellConfig.getInt("values.max-targets", 8);
+        this.hitPlayers = spellConfig.getBoolean("flags.hit-players", true);
+        this.hitMobs = spellConfig.getBoolean("flags.hit-mobs", true);
+        this.damagePlayers = spellConfig.getBoolean("flags.damage-players", false);
 
         ArmorStand beacon = player.getWorld().spawn(player.getLocation(), ArmorStand.class, as -> {
             as.setInvisible(true);
             as.setMarker(true);
             as.setGravity(false);
             as.setInvulnerable(true);
+            as.setPersistent(false);
         });
 
-        new BeaconTask(beacon, radius, healAmount, damageAmount, durationPulses, maxTargets, hitPlayers, hitMobs, context).runTaskTimer(context.plugin(), 0L, pulseInterval);
+        // FIX 1: Null-check voor de plugin instance
+        Plugin plugin = context.plugin();
+        if (plugin == null) {
+            beacon.remove(); // Ruim de armor stand op als de taak niet kan starten
+            return null;
+        }
+
+        new BeaconTask(beacon, context).runTaskTimer(plugin, 0L, this.pulseInterval);
         return null;
     }
 
@@ -88,45 +114,54 @@ public class RadiantBeacon extends Spell<Void> {
 
     private class BeaconTask extends BukkitRunnable {
         private final ArmorStand beacon;
-        private final double radius;
-        private final double healAmount;
-        private final double damageAmount;
-        private final int durationPulses;
-        private final int maxTargets;
-        private final boolean hitPlayers;
-        private final boolean hitMobs;
         private final SpellContext context;
         private int pulsesCompleted = 0;
 
-        public BeaconTask(ArmorStand beacon, double radius, double healAmount, double damageAmount, int durationPulses, int maxTargets, boolean hitPlayers, boolean hitMobs, SpellContext context) {
+        public BeaconTask(ArmorStand beacon, SpellContext context) {
             this.beacon = beacon;
-            this.radius = radius;
-            this.healAmount = healAmount;
-            this.damageAmount = damageAmount;
-            this.durationPulses = durationPulses;
-            this.maxTargets = maxTargets;
-            this.hitPlayers = hitPlayers;
-            this.hitMobs = hitMobs;
             this.context = context;
         }
 
         @Override
+        public synchronized void cancel() throws IllegalStateException {
+            super.cancel();
+            if (beacon.isValid()) {
+                beacon.remove();
+            }
+        }
+
+        @Override
         public void run() {
-            if (!beacon.isValid() || pulsesCompleted >= durationPulses) {
-                if (beacon.isValid()) beacon.remove();
+            if (!beacon.isValid() || pulsesCompleted >= totalPulses) {
                 this.cancel();
                 return;
             }
 
-            List<LivingEntity> nearbyEntities = beacon.getWorld().getNearbyLivingEntities(beacon.getLocation(), radius).stream().limit(maxTargets).toList();
+            List<LivingEntity> nearbyEntities = beacon.getWorld()
+                    .getNearbyLivingEntities(beacon.getLocation(), radius, entity -> !entity.equals(beacon) &&
+                            ((entity instanceof Player && hitPlayers) || (!(entity instanceof Player) && hitMobs)))
+                    .stream()
+                    .limit(maxTargets)
+                    .collect(Collectors.toList());
 
             for (LivingEntity entity : nearbyEntities) {
-                if (entity.equals(beacon)) continue;
+                if (entity instanceof Player playerTarget) {
+                    if (damagePlayers && !playerTarget.equals(context.caster())) {
+                        entity.damage(damageAmount, context.caster());
+                    } else {
+                        // FIX 3: Veilige null-check voor max health attribute
+                        AttributeInstance maxHealthAttribute = entity.getAttribute(Attribute.GENERIC_MAX_HEALTH);
+                        if (maxHealthAttribute != null) {
+                            double maxHealth = maxHealthAttribute.getValue();
+                            entity.setHealth(Math.min(maxHealth, entity.getHealth() + healAmount));
+                        }
 
-                if (entity instanceof Player) { // Simple ally check
-                    entity.setHealth(Math.min(entity.getAttribute(Attribute.GENERIC_MAX_HEALTH).getValue(), entity.getHealth() + healAmount));
-                    entity.getActivePotionEffects().stream().filter(e -> isNegativeEffect(e.getType())).findFirst().ifPresent(e -> entity.removePotionEffect(e.getType()));
-                } else if (hitMobs) {
+                        entity.getActivePotionEffects().stream()
+                                .filter(e -> NEGATIVE_EFFECTS.contains(e.getType()))
+                                .findFirst()
+                                .ifPresent(e -> entity.removePotionEffect(e.getType()));
+                    }
+                } else {
                     entity.damage(damageAmount, context.caster());
                 }
             }
@@ -138,17 +173,22 @@ public class RadiantBeacon extends Spell<Void> {
             pulsesCompleted++;
         }
 
-        private boolean isNegativeEffect(PotionEffectType type) {
-            return List.of(PotionEffectType.POISON, PotionEffectType.WITHER, PotionEffectType.SLOWNESS, PotionEffectType.WEAKNESS, PotionEffectType.BLINDNESS, PotionEffectType.NAUSEA).contains(type);
-        }
-
         private void spawnBeaconParticles(Location location, double radius) {
-            for (int i = 0; i < 10; i++) {
-                context.fx().spawnParticles(location.clone().add(0, i * 0.5, 0), Particle.END_ROD, 1, 0, 0, 0, 0);
+            final int BEACON_HEIGHT_PARTICLES = 10;
+            final double BEACON_PARTICLE_STEP = 0.5;
+            final int RING_PARTICLE_COUNT = 20;
+            final double RING_RADIUS_MODIFIER = 0.8;
+
+            for (int i = 0; i < BEACON_HEIGHT_PARTICLES; i++) {
+                context.fx().spawnParticles(location.clone().add(0, i * BEACON_PARTICLE_STEP, 0), Particle.END_ROD, 1,
+                        0, 0, 0, 0);
             }
-            for (int i = 0; i < 20; i++) {
-                double angle = 2 * Math.PI * i / 20;
-                context.fx().spawnParticles(location.clone().add(radius * 0.8 * Math.cos(angle), 1, radius * 0.8 * Math.sin(angle)), Particle.GLOW, 1, 0, 0, 0, 0);
+
+            for (int i = 0; i < RING_PARTICLE_COUNT; i++) {
+                double angle = 2 * Math.PI * i / RING_PARTICLE_COUNT;
+                double x = radius * RING_RADIUS_MODIFIER * Math.cos(angle);
+                double z = radius * RING_RADIUS_MODIFIER * Math.sin(angle);
+                context.fx().spawnParticles(location.clone().add(x, 1, z), Particle.GLOW, 1, 0, 0, 0, 0);
             }
         }
     }
